--- a/FRONT/src/app/components/views/motorista/listar-motorista/listar-motorista.component.html
+++ b/FRONT/src/app/components/views/motorista/listar-motorista/listar-motorista.component.html
@@ -1,6 +1,8 @@
 <a routerLink="/motorista/cadastrar">Cadastrar Motorista</a>
 <br>
 <a routerLink="/motorista/alterar">Alterar Motorista</a>
+<br>
+<a routerLink="/motorista/deletar">Deletar Motorista</a>
 
 <ol>
     <li *ngFor="let motorista of motoristas">
@@ -8,4 +10,4 @@
     </li>
 </ol>
 
-<a routerLink="/motorista/deletar">Deletar Motorista</a>
+<a routerLink="/veiculo/listar">Veiculo</a>
