--- a/FRONT/src/app/components/views/veiculo/listar-veiculo/listar-veiculo.component.html
+++ b/FRONT/src/app/components/views/veiculo/listar-veiculo/listar-veiculo.component.html
@@ -1,6 +1,8 @@
 <a routerLink="/veiculo/cadastrar">Cadastrar Veiculo</a>
 <br>
 <a routerLink="/veiculo/alterar">Alterar Veiculo</a>
+<br>
+<a routerLink="/veiculo/deletar">Deletar Veiculo</a>
 
 <ol>
     <li *ngFor="let veiculo of veiculos">
@@ -8,4 +10,4 @@
     </li>
 </ol>
 
-<a routerLink="/veiculo/deletar">Deletar Veiculo</a>
+<a routerLink="/motorista/listar">Motorista</a>
